<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".MainActivity">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">

    <ImageButton
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:ignore="ButtonStyle,NestedWeights,SpeakableTextPresentCheck"
        android:contentDescription="@string/x_o_box" />

    <ImageButton
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:ignore="ButtonStyle,SpeakableTextPresentCheck"
        android:contentDescription="@string/x_o_box"/>

    <ImageButton
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:ignore="ButtonStyle,SpeakableTextPresentCheck"
        android:contentDescription="@string/x_o_box"/>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">


    <ImageButton
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:ignore="ButtonStyle,SpeakableTextPresentCheck"
        android:contentDescription="@string/x_o_box"/>

    <ImageButton
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:ignore="ButtonStyle,SpeakableTextPresentCheck"
        android:contentDescription="@string/x_o_box"/>

    <ImageButton
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/x_o_box"
        tools:ignore="ButtonStyle,SpeakableTextPresentCheck" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">

    <ImageButton
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:ignore="ButtonStyle,SpeakableTextPresentCheck"
        android:contentDescription="@string/x_o_box"/>

    <ImageButton
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:ignore="ButtonStyle,SpeakableTextPresentCheck"
        android:contentDescription="@string/x_o_box"/>

    <ImageButton
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:ignore="ButtonStyle,SpeakableTextPresentCheck"
        android:contentDescription="@string/x_o_box"/>
</LinearLayout>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="648dp"
    android:layout_weight="1">

    <TextView
        android:id="@+id/player1_score"
        android:layout_width="38dp"
        android:layout_height="39dp"
        android:layout_marginBottom="4dp"
        android:text="@string/zero"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/player2_score"
        app:layout_constraintEnd_toStartOf="@+id/action_button"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintStart_toEndOf="@+id/text_player1" />

    <EditText
        android:id="@+id/text_player1"
        android:layout_width="162dp"
        android:layout_height="39dp"
        android:hint="@string/player1_name"
        app:layout_constraintBottom_toTopOf="@+id/text_player2"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/text_player2"
        android:layout_width="162dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/player2_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player2_score"
        android:layout_width="38dp"
        android:layout_height="43dp"
        android:layout_marginBottom="16dp"
        android:text="@string/zero"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/action_button"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toEndOf="@+id/text_player2" />

</androidx.constraintlayout.widget.ConstraintLayout>
<!--<EditText

<androidx.constraintlayout.widget.ConstraintLayout
android:layout_width="wrap_content"
android:layout_height="match_parent">

    android:id="@+id/player2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/player_2_name"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="670dp" />

<EditText
    android:id="@+id/player1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/player1_name"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="618dp" />


<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Temp" />
</androidx.constraintlayout.widget.ConstraintLayout> -->



</LinearLayout>